--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="10dp"
-        android:text="Geeks for Geeks \n Welcome to Home Screen"
+        android:text="Welcome"
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="20sp" />
